<resources>
    <string name="app_name">Diet App</string>

    <string name="proteins">Białko</string>
    <string name="carbs">Węglowodany</string>
    <string name="fats">Tłuszcze</string>

    <string name="breakfast">Śniadanie</string>
    <string name="lunch">Obiad</string>
    <string name="dinner">Kolacja</string>

    <string name="ingredients">Składniki</string>
    <string name="preparation">Przygotowanie</string>
    <string name="macronutrients">Makroskładniki</string>
    <string name="calories">Kalorie</string>

    <string name="my_data">Moje dane</string>
    <string name="account_settings">Ustawienia konta</string>
    <string name="desc">Dieta idealnie dopasowana do twojego podniebienia!</string>
    <string name="desc2">Inny sposób logowania</string>
    <string name="desc3">Inny sposób rejestracji</string>

    <string name="change_password">Zmiana hasła</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_password">Powtórz nowe hasło</string>

    <string name="gender">Płeć</string>
    <string name="age">Wiek</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="activity">Aktywność fizyczna</string>
    <string name="goal">Cel</string>
    <string name="disabled">Wyklucz</string>
    <string name="bmi">BMI</string>
    <string name="setup_activity_level">Wybierz poziom aktywności</string>

    <string name="meat">mięso</string>
    <string name="lactose">laktoza</string>
    <string name="peanuts">orzechy</string>

    <string name="error_empty_field">To pole nie może być puste!</string>
    <string name="error_format">Niepoprawne dane!</string>
    <string name="error_light_weight">Zbyt niska waga! Dopuszczalny zakres to 40 kg - 150 kg</string>
    <string name="error_heavy_weight">Zbyt wysoka waga! Dopuszczalny zakres to 40 kg - 150 kg</string>
    <string name="error_small_height">Zbyt niski wzrost! Dopuszczalny zakres to 140 cm - 220 cm</string>
    <string name="error_high_height">Zbyt wysoki wzrost! Dopuszczalny zakres to 140 cm - 220 cm</string>

    <string name="cancel">Anuluj</string>
    <string name="ok">Ok</string>
    <string name="save">Zapisz</string>
    <string name="reset">Resetuj</string>
    <string name="login_btn">Logowanie</string>
    <string name="register_btn">Rejestracja</string>
    <string name="email">Wpisz email</string>
    <string name="password">Wpisz hasło</string>
    <string name="repeatpassword">Powtórz hasło</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="logout">Wyloguj</string>
    <string name="edit">Edytuj</string>
    <string name="change">Zamień</string>

    <string name="sign_up_successfufly">Konto utworzone pomyślnie!</string>
    <string name="sign_in_successfufly">Zalogowano pomyślnie!</string>
    <string name="email_is_empty">Pole E-mail jest puste!</string>
    <string name="password_is_empty">Pole hasło jest puste!</string>
    <string name="old_password_is_empty">Stare hasło jest puste!</string>
    <string name="different_passwords">Hasła są różne!</string>

    <string name="search">Wyszukaj...</string>
    <string name="filters">Filtry</string>
    <string name="sorting">Sortowanie</string>
    <string name="filtering">Filtrowanie</string>

    <string name="order">Kolejność</string>
    <string name="calculated_100g">w przeliczeniu na 100g</string>
    <string-array name="filter_order">
        <item>Nazwa: A - Z</item>
        <item>Nazwa: Z - A</item>
        <item>Kalorie: rosnąco</item>
        <item>Kalorie: malejąco</item>
        <item>Białko: rosnąco</item>
        <item>Białko: malejąco</item>
        <item>Węglowodany:\nrosnąco</item>
        <item>Węglowodany:\nmalejąco</item>
        <item>Tłuszcze: rosnąco</item>
        <item>Tłuszcze: malejąco</item>
    </string-array>

    <string-array name="days">
        <item>Pn</item>
        <item>Wt</item>
        <item>Śr</item>
        <item>Czw</item>
        <item>Pt</item>
        <item>Sb</item>
        <item>Ndz</item>
    </string-array>

    <string-array name="genders">
        <item>Mężczyzna</item>
        <item>Kobieta</item>
    </string-array>
    <string name="man">Mężczyzna</string>
    <string name="woman">Kobieta</string>

    <string-array name="goals">
        <item>Schudnięcie</item>
        <item>Utrzymanie wagi</item>
        <item>Nabranie wagi</item>
    </string-array>

    <string-array name="activities">
        <item>Bardzo niska</item>
        <item>Niska</item>
        <item>Umiarkowana</item>
        <item>Wysoka</item>
        <item>Bardzo wysoka</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Niedziela</item>
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
    </string-array>

    <string-array name="password_strength">
        <item>Bardzo słabe hasło</item>
        <item>Słabe hasło</item>
        <item>Średnie hasło</item>
        <item>Dobre hasło</item>
        <item>Bardzo dobre hasło</item>
    </string-array>
</resources>