<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainactivity.profile.ProfileDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/Row_A">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/gender" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@color/black"
                tools:ignore="RtlSymmetry">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="0dp"
                    android:paddingStart="10dp"
                    android:text="Mężczyzna"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/Row_B">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/age" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/age"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:icon="@drawable/dropdown_arrow"
                app:iconGravity="end"
                app:iconTint="@color/black"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout style="@style/Row_A">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/weight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/weight"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:icon="@drawable/dropdown_arrow"
                app:iconGravity="end"
                app:iconTint="@color/black"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout style="@style/Row_B">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/height" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/height"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:icon="@drawable/dropdown_arrow"
                app:iconGravity="end"
                app:iconTint="@color/black"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout style="@style/Row_A">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/activity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_level"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="RtlSymmetry">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="0dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/Row_B">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/goal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="RtlSymmetry">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="0dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/Row_A">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/preferences" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/preferences"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="RtlSymmetry">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="0dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/Row_B">

            <com.google.android.material.textview.MaterialTextView
                style="@style/RowTextView"
                android:text="@string/bmi" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bmi"
                style="@style/RowTextView"
                android:paddingStart="10dp"
                android:text="25" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>